tests/fixtures/invalid/import-8.py
a = 1  # Check 1
import os

import os  # Check 2
import os

a = 1  # Check 3
# Lorem ipsum dolor sit amet
import os

a = 1  # Check 4
"""
Lorem ipsum dolor sit amet
"""
import os

a = """
Multiline string assignment
"""
import os  # Check 5

for a in [1, 2]:  # Check 6
    a = 1
    import os

for a in [1, 2]:  # Check 7
    import os
    import os

print(1)  # Check 8
import os
